# ncurses_snake

./: CMakeLists.txt  PROJECT_GOALS.md  README.md  game.cpp  game.h  main.cpp  player.cpp  player.h  ui.cpp  ui.h
db/: game_db.h
game/: game.cpp  game.h  player.cpp  player.h  ui.cpp  ui.h
